--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>saro-rosy ❤️</title>
+    <title> pipi </title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&family=Homemade+Apple&display=swap'>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,30 +13,30 @@
 <div class="paper heart"></div>
 
 <div class="paper image">
-    <p> and I have fallen in</p>
-    <p>Love with You 😍 </p>
-    <img src="https://iili.io/HSzXpzg.jpg" alt="Image 1" />
+    <p> CHEERS TO TWO YEARS </p>
+    <p>OF TOGETHERNESS </p>
+    <img src="https://i.imgur.com/7rqCBDI.jpeg" alt="Image 1" />
 </div>
 
 <div class="paper image">
     <p></p>
-    <img src="https://iili.io/HSzXbmF.jpg" alt="Image 2" />
+    <img src="https://i.imgur.com/hGMQfQ5.jpeg" alt="Image 2" />
 </div>
 
 <div class="paper image">
-    <p>How can someone</p>
-    <p> be so cute ❤️ </p>
-    <img src="https://iili.io/HSzXyXa.jpg" alt="Image 3" />
+    <p>HOW CAN SOMEONE</p>
+    <p> BE SO CUTE </p>
+    <img src="https://i.imgur.com/hGMQfQ5.jpeg" alt="Image 3" />
 </div>
 
 <div class="paper red">
-    <p class="p1">You are My Favorite</p>
-    <p class="p2">Person 😍</p>
+    <p class="p1">YOU ARE MY FAVORITE </p>
+    <p class="p2"> PERSON  >.< </p>
 </div>
 
 <div class="paper">
-    <p class="p1">You are Cute </p>
-    <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
+    <p class="p1">SO CUTE </p>
+    <p class="p1">SO PRETTY  <span style="color: red !important;"></span></p>
 </div>
 
 <div class="paper">
