--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="paper image">
     <p> CHEERS TO TWO YEARS </p>
-    <p>OF TOGETHERNESS </p>
+    <p> OF TOGETHERNESS </p>
     <img src="https://i.imgur.com/7rqCBDI.jpeg" alt="Image 1" />
 </div>
 
@@ -26,12 +26,12 @@
 <div class="paper image">
     <p>HOW CAN SOMEONE</p>
     <p> BE SO CUTE </p>
-    <img src="https://i.imgur.com/hGMQfQ5.jpeg" alt="Image 3" />
+    <img src="https://i.imgur.com/ldtHHHQ.jpeg" alt="Image 3" />
 </div>
 
 <div class="paper red">
-    <p class="p1">YOU ARE MY FAVORITE </p>
-    <p class="p2"> PERSON  >.< </p>
+    <p class="p1">YOU ARE MY FAVORITE PERSON </p>
+    <p class="p2"> YOU ARE MY EVERYTHING  >.< </p>
 </div>
 
 <div class="paper">
